main.css
body {
    background: #f8f8f8;
}

ul.no-dots {
    list-style-type: none;
}
/*
@media (min-width: 768px){
    body>.mobile-fullwidth {
        max-width: none;
    }
}

@media (min-width: 992px) and (max-width:1199px){
    body>.mobile-fullwidth {
        max-width: 960px!important;
    }
}

@media (min-width: 1200px ){
    .container {
        max-width: 1140px!important;
    }
}*/

.menu {
    height: 65px;
    background: #fff;
    box-shadow: 0px 8px 18px rgba(0, 0, 0, .2);;
}

.menu-logo {
    height: 40px;
}

.menu-logo-container {
    padding: 12px 0;
    border-right: 1px #F3F3F3 solid;
}

.menu-nav-container {
    padding: 20px 0!important;
}

.menu-nav-container>ul {
    margin-bottom:auto;
    margin-top:auto;
    padding-left: 10px;
}


input {
    outline: none;
}

input[type=search] {
	-webkit-appearance: textfield;
	-webkit-box-sizing: content-box;
	font-family: inherit;
	font-size: 100%;
}
input::-webkit-search-decoration,
input::-webkit-search-cancel-button {
	display: none; 
}

input[type=search] {
	background: transparent url(images/icon-search.png) no-repeat 9px center;
	border: solid 1px transparent;
	padding: 0 10px;
	width: 55px;
	
	-webkit-border-radius: 10em;
	-moz-border-radius: 10em;
	border-radius: 10em;
	
	-webkit-transition: all .5s;
	-moz-transition: all .5s;
	transition: all .5s;
}
input[type=search]:focus {
	background: transparent url(images/icon-search-blue.png) no-repeat 9px center;
	width: 130px;
	background-color: #fff;
	border-color: #fff;
	
	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
	box-shadow: 0 0 5px rgba(109,207,246,.5);
}

input:-moz-placeholder {
	color: #999;
}
input::-webkit-input-placeholder {
	color: #999;
}

#search {
    width: fit-content;
    display: inline;
}

#search input[type=search] {
	width: 15px;
	padding-left: 10px;
	color: transparent;
	cursor: pointer;
}
#search input[type=search]:hover {
	background-color: #fff;
}
#search input[type=search]:focus {
	width: 130px;
	padding-left: 32px;
	color: #000;
	background-color: #fff;
	cursor: auto;
}
#search input:-moz-placeholder {
	color: transparent;
}
#search input::-webkit-input-placeholder {
	color: transparent;
}

#search input:focus::-moz-placeholder {
	color: black;
}
#search input:focus::-webkit-input-placeholder {
	color: black;
}

.mobile-menu {
    height: 56px;
    border-bottom: 3px solid #40A9BC;
    background: #fff;
    display: flex;
}

.mobile-menu>div {
    width: fit-content;
}

@media (max-width: 1199px) and (min-width: 992px){
    nav.mobile-menu {
        max-width: none!important;
    }
}

button.navbar-toggler {
    border: none;
    border-radius: .25rem;
}

.navbar-toggler-icon {
    background-image: url("images/icon-menu.png")!important;
    height: 14px!important;
}

.navbar.mobile-menu {
    padding: 0;
}
a.navbar-brand{
    padding: 11px;
}

.navbar-brand>img {
    height: 35px;
}

.nav-item {
    padding: 19px 0 19px 19px;
}

a.nav-link {
    color: #fff!important;
}

.nav-item:not(:last-child) {
    border-bottom: 1px solid rgba(255, 255, 255, .16);
}

.navbar-collapse {
    background: #40A9BC;
}

.container-plain, .container-plain div {
    padding-left: 0!important;
    padding-right: 0!important;
}

.faux-banner {
    background: #40A9BC;
    height: 199px;
    min-height: 199px;
    z-index: -1;
}

.float-share {
    width: fit-content;
    position: absolute;
    top: 345px;
}

.float-share-group {
    padding: 0;
    width: fit-content;
}

.float-share-group>li>img {
    padding: 16px 10px!important;
}

.float-share-facebook {
    background: #4867AA;
}

.float-share-twitter {
    background: #1DA1F2;
}

.float-share-gplus {
    background: #DB5043;
}

.float-share-linkedin {
    background: #0274B3;
}

.float-share-email {
    background: #3C3C3C;
}

.row {
    margin-right: 0!important;
    margin-left: 0!important;
}

.menu-item {
    padding: 25px 20px;
}

.container.body{
    padding: 0 27px 80px;
    background: #FFF;
    box-shadow: 0px 8px 18px rgba(0, 0, 0, .2);
}

@media(min-width:768px){
    .container.body {
        margin-bottom: 76px;
        margin-top: -405px;
    }
}

@media(max-width:768px){
    .container.body{
        margin-top: -471px!important;
        margin-bottom: 0px!important;
    }
}

.container.body>.row>div {
    padding: 27px;
}

.content>div{
    width: 100%;
    margin-bottom: 32px;
}

p:last-child {
    margin: 0;
}

.card-low {
    border-radius:2px;
    border: #EDEDED solid 1px;
}

.card-high {
    box-shadow: 0px 8px 12px rgba(0, 0, 0, .04);
    padding: 0!important;
}

.bg-blue {
    background:#40A9BC;
}

.post-image {
    margin-bottom: 24px;
}

.post-image>img {
    width: 100%;
    height: auto;
}

.go-compare {
    padding: 26px 0;
}

.go-compare>a {
    width: fit-content;
    float: none; 
    margin: 0 auto;
}

.button-green, a.button-green {
    padding: 12px 48px;
    border-radius: 2px;
    background: #79CA1B;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
    color: #FFF;
    text-align: center;
}

.phone-cta {
    padding: 3px 9px;
    border-radius: 2px;
    background: #79CA1B;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
    color: #FFF;
    text-align: center;
    white-space: nowrap
}

.article-image>img {
    float: none; 
    margin: 0 auto;
}

.main-quote>div {
    padding: 35px;
}

.end-quote {
    padding: 40px;
    color: #fff;
}

.end-quote .form-row>.form-group {
    padding: 0 8px!important;
}

.comment-section {
    background: #f8f8f8;
    padding: 45px 39px;
}

.suggestion-head {
    padding: 0 34px 20px;
}
.suggestion-carousel {
    margin: 0 3px;
}

.suggestion-desc {
    padding: 16px 18px 22px;
}

.suggestion-title {
    color: #40A9BC;
}

.suggestion-carousel>.row>div {
    margin: 0 13px;
    padding: 0;
}

.suggestion-content>div {
    padding: 0;
}
.suggestion-image>img {
    width: 100%;
}
div.suggestion-nav {
    width: 12px!important;
}

.suggestion-content, .suggestion-carousel {
    display: inline-flex;
}
.suggestion-carousel>div {
    margin: 0 13px;
    width: 25%!important;
}

.container.footer-quote {
    padding: 40px 0;
    background-image: url("images/bg-playstation.png");
    background-repeat: repeat;
}

.footer-menu {
    padding: 54px 0 66px;
    border-bottom: 1px #E8E8E8 solid;
}

.footer-icons>ul>li, .menu-nav-container>ul>li {
    display: inline;
}

.footer-copyright {
    padding-top: 30px;
    padding-bottom: 30px;
}

.sidebar>div {
    margin-bottom: 23px;
}

.page-contents-header, .page-categories-header, .page-guides-header {
    padding: 15px 17px 11px;
    border-bottom: #EDEDED solid 1px;
}

.page-contents-entries, .page-categories-entries {
    padding: 25px 19px 35px 19px;
}

.page-categories-entries>ul>li.active {
    color: #22c0e8;
}

.page-contents-entries>ul>li>a {
    color: #000;
}

.page-guides-entries {
    padding: 19px 16px;
}
.page-guides-article {
    margin-bottom: 19px;
}
.page-guides-thumbnail>img {
    width: inherit;
}

.page-guides-link {
    padding-right: 0!important;
}

.blue-header {
    background: #40A9BC;
    color: #fff;
}

#accordion>.card>.card-header>h5>button {
    padding: 0;
    color: #40A9BC;
}

#accordion>.card>.card-header {
    background-color: #fff!important;
}

#accordion>.card {
    border-radius: 0!important;
}

#accordion>.card:first-child {
    border-radius: 2px 2px 0 0!important;
}

#accordion>.card:last-child {
    border-radius: 0 0 2px 2px!important;
}

ul.timeline {
    list-style-type: none;
    position: relative;
}
ul.timeline:before {
    content: ' ';
    background: #d4d9df;
    display: inline-block;
    position: absolute;
    left: 30px;
    width: 1px;
    height: 85%;
    z-index: 400;
    top :8px;
}
ul.timeline > li {
    margin: 15px 0;
    padding-left: 20px;
}

ul.timeline > li.active > a {
    color: #22c0e8;
}
ul.timeline > li.active:before {
    content: ' ';
    background: #22c0e8;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 1px solid #22c0e8;
    left: 26px;
    width: 9px;
    height: 9px;
    z-index: 400;
    margin-top: 8px;

}
ul.timeline > li:before {
    content: ' ';
    background: white;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 1px solid #000;
    left: 26px;
    width: 9px;
    height: 9px;
    z-index: 400;
    margin-top: 8px;
}

ul.timeline-cover {
    list-style-type: none;
    position: relative;
}
ul.timeline-cover:before {
    content: ' ';
    background: #d4d9df;
    display: inline-block;
    position: absolute;
    left: 30px;
    width: 1px;
    height: 85%;
    z-index: 400;
    top :8px;
}
ul.timeline-cover > li {
    margin: 15px 0;
    padding-left: 20px;
}

ul.timeline-cover > li.active > a {
    color: #22c0e8;
}

ul.timeline-cover > li:before {
    content: '\ufe0f';
    background: #79CA1B;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 1px solid #79CA1B;
    left: 19px;
    width: 23px;
    height: 23px;
    z-index: 400;
}

